--- a/docs/gateway/guides/prompt-templates-schemas.mdx
+++ b/docs/gateway/guides/prompt-templates-schemas.mdx
@@ -202,7 +202,7 @@ You can use the same Docker Compose configuration as the Quickstart (available b
 
 ```yaml title="docker-compose.yml" {17-19}
 # This is a simplified example for learning purposes. Do not use this in production.
-# For production-ready deployments, see: https://www.tensorzero.com/gateway/deployment
+# For production-ready deployments, see: https://www.tensorzero.com/docs/gateway/deployment
 
 services:
   clickhouse:
