--- a/docs/gateway/guides/providers/fireworks.mdx
+++ b/docs/gateway/guides/providers/fireworks.mdx
@@ -93,7 +93,7 @@ Create a minimal Docker Compose configuration:
 
 ```yaml title="docker-compose.yml"
 # This is a simplified example for learning purposes. Do not use this in production.
-# For production-ready deployments, see: https://www.tensorzero.com/gateway/deployment
+# For production-ready deployments, see: https://www.tensorzero.com/docs/gateway/deployment
 
 services:
   gateway:
