--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -106,7 +106,7 @@ curl -LO "https://raw.githubusercontent.com/tensorzero/tensorzero/refs/heads/mai
 
 ```yaml title="docker-compose.yml"
 # This is a simplified example for learning purposes. Do not use this in production.
-# For production-ready deployments, see: https://www.tensorzero.com/gateway/deployment
+# For production-ready deployments, see: https://www.tensorzero.com/docs/gateway/deployment
 
 services:
   clickhouse:
