--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -1008,7 +1008,7 @@ api_base = "https://api.openai.com/v1/"
 
 Defines the model name to use with the OpenAI API.
 
-See <a href="https://platform.openai.com/models" target="_blank">OpenAI's documentation</a> for the list of available model names.
+See <a href="https://platform.openai.com/docs/models" target="_blank">OpenAI's documentation</a> for the list of available model names.
 
 ```toml
 // tensorzero.toml
@@ -1404,7 +1404,7 @@ api_base = "https://api.openai.com/v1/"
 
 Defines the model name to use with the OpenAI API.
 
-See <a href="https://platform.openai.com/models/embeddings" target="_blank">OpenAI's documentation</a> for the list of available model names.
+See <a href="https://platform.openai.com/docs/models/embeddings" target="_blank">OpenAI's documentation</a> for the list of available model names.
 
 ```toml
 // tensorzero.toml
