--- a/docs/gateway/guides/providers/openai.mdx
+++ b/docs/gateway/guides/providers/openai.mdx
@@ -77,7 +77,7 @@ type = "chat_completion"
 model = "gpt_4o_mini_2024_07_18"
 ```
 
-See the [list of models available on OpenAI](https://platform.openai.com/models/).
+See the [list of models available on OpenAI](https://platform.openai.com/docs/models/).
 
 See the [Configuration Reference](/gateway/configuration-reference/) for optional fields (e.g. overwriting `api_base`).
 
