--- a/docs/gateway/guides/multimodal-inference.mdx
+++ b/docs/gateway/guides/multimodal-inference.mdx
@@ -5,7 +5,7 @@ description: Learn how to use multimodal inference with TensorZero Gateway.
 
 TensorZero Gateway supports multimodal inference (e.g. image and PDF inputs).
 
-See [Integrations](/docs/gateway/integrations/) for a list of supported models.
+See [Integrations](/gateway/integrations/) for a list of supported models.
 
 <Tip>
 
@@ -35,7 +35,7 @@ allow_http = true
 ```
 
 You can also store files in a local directory (`type = "filesystem"`) or disable file storage (`type = "disabled"`).
-See [Configuration Reference](/docs/gateway/configuration-reference/#object_storage) for more details.
+See [Configuration Reference](/gateway/configuration-reference/#object_storage) for more details.
 
 The TensorZero Gateway will attempt to retrieve credentials from the following resources in order of priority:
 
