--- a/docs/comparison/langchain.mdx
+++ b/docs/comparison/langchain.mdx
@@ -26,15 +26,15 @@ We provide a minimal example [integrating TensorZero with LangGraph](https://git
 
 - **Unified Interface.**
   Both TensorZero and LangChain offer a unified interface that allows you to access LLMs from most major model providers with a single integration, with support for structured outputs, tool use, streaming, and more.<br />
-  [→ TensorZero Gateway Quickstart](/docs/quickstart/)
+  [→ TensorZero Gateway Quickstart](/quickstart/)
 
 - **Inference-Time Optimizations.**
   Both TensorZero and LangChain offer inference-time optimizations like dynamic in-context learning.<br />
-  [→ Inference-Time Optimizations with TensorZero](/docs/gateway/guides/inference-time-optimizations/)
+  [→ Inference-Time Optimizations with TensorZero](/gateway/guides/inference-time-optimizations/)
 
 - **Inference Caching.**
   Both TensorZero and LangChain allow you to cache requests to improve latency and reduce costs.<br />
-  [→ Inference Caching with TensorZero](/docs/gateway/guides/inference-caching/)
+  [→ Inference Caching with TensorZero](/gateway/guides/inference-caching/)
 
 ## Key Differences
 
@@ -45,7 +45,7 @@ We provide a minimal example [integrating TensorZero with LangGraph](https://git
   By treating LLM functions as interfaces with structured inputs and outputs, TensorZero allows you to swap implementations without changing application code.
   This approach makes it easier to manage complex LLM applications, enables GitOps for prompt and configuration management, and streamlines optimization and experimentation workflows.
   LangChain blends application logic with LLM implementation details, streamlining rapid prototyping but making it harder to maintain and optimize complex applications.<br />
-  [→ Prompt Templates & Schemas with TensorZero](/docs/gateway/guides/prompt-templates-schemas/)<br />
+  [→ Prompt Templates & Schemas with TensorZero](/gateway/guides/prompt-templates-schemas/)<br />
   [→ Advanced: Think of LLM Applications as POMDPs — Not Agents](/blog/think-of-llm-applications-as-pomdps-not-agents/)
 
 - **Open-Source Observability.**
@@ -56,49 +56,49 @@ We provide a minimal example [integrating TensorZero with LangGraph](https://git
   TensorZero offers built-in optimization features, including supervised fine-tuning, RLHF, and automated prompt engineering recipes.
   With the TensorZero UI, you can fine-tune models using your inference and feedback data in just a few clicks.
   LangChain doesn't offer any built-in optimization features.<br />
-  [→ Optimization Recipes with TensorZero](/docs/recipes/)
+  [→ Optimization Recipes with TensorZero](/recipes/)
 
 - **Built-in Evaluations.**
   TensorZero offers built-in evaluation functionality, including heuristics and LLM judges.
   LangChain requires a separate commercial service (LangSmith) for evaluations.<br />
-  [→ TensorZero Evaluations Overview](/docs/evaluations/)
+  [→ TensorZero Evaluations Overview](/evaluations/)
 
 - **Built-in Experimentation (A/B Testing).**
   TensorZero offers built-in experimentation features, allowing you to run experiments on your prompts, models, and inference strategies.
   LangChain doesn't offer any experimentation features.<br />
-  [→ Experimentation (A/B Testing) with TensorZero](/docs/gateway/guides/experimentation/)
+  [→ Experimentation (A/B Testing) with TensorZero](/gateway/guides/experimentation/)
 
 - **Performance & Scalability.**
   TensorZero is built from the ground up for high performance, with a focus on low latency and high throughput.
   LangChain introduces substantial latency and memory overhead to your application.<br />
-  [→ TensorZero Gateway Benchmarks](/docs/gateway/benchmarks/)
+  [→ TensorZero Gateway Benchmarks](/gateway/benchmarks/)
 
 - **Language and Platform Agnostic.**
   TensorZero is language and platform agnostic; in addition to its Python client, it supports any language that can make HTTP requests.
   LangChain only supports applications built in Python and JavaScript.<br />
-  [→ TensorZero Gateway API Reference](/docs/gateway/api-reference/inference/)
+  [→ TensorZero Gateway API Reference](/gateway/api-reference/inference/)
 
 - **Batch Inference.**
   TensorZero supports batch inference with certain model providers, which significantly reduces inference costs.
   LangChain doesn't support batch inference.<br />
-  [→ Batch Inference with TensorZero](/docs/gateway/guides/batch-inference/)
+  [→ Batch Inference with TensorZero](/gateway/guides/batch-inference/)
 
 - **Credential Management.**
   TensorZero streamlines credential management for your model providers, allowing you to manage your API keys in a single place and set up advanced workflows like load balancing between API keys.
   LangChain only offers basic credential management features.<br />
-  [→ Credential Management with TensorZero](/docs/gateway/guides/credential-management/)
+  [→ Credential Management with TensorZero](/gateway/guides/credential-management/)
 
 - **Automatic Fallbacks for Higher Reliability.**
   TensorZero allows you to very easily set up retries, fallbacks, load balancing, and routing to increase reliability.
   LangChain only offers basic, cumbersome fallback functionality.<br />
-  [→ Retries & Fallbacks with TensorZero](/docs/gateway/guides/retries-fallbacks/)
+  [→ Retries & Fallbacks with TensorZero](/gateway/guides/retries-fallbacks/)
 
 ### LangChain
 
 - **Focus on Rapid Prototyping.**
   LangChain is designed for rapid prototyping, with a focus on ease of use and rapid iteration.
   TensorZero is designed for production-grade deployments, so it requires more setup and configuration (e.g. a database to store your observability data) &mdash; but you can still get started in minutes.<br />
-  [→ TensorZero Quickstart — From 0 to Observability & Fine-Tuning](/docs/quickstart/)
+  [→ TensorZero Quickstart — From 0 to Observability & Fine-Tuning](/quickstart/)
 
 - **Ecosystem of Integrations.**
   LangChain has a large ecosystem of integrations with other libraries and tools, including model providers, vector databases, observability tools, and more.
