--- a/docs/gateway/guides/providers/openai.mdx
+++ b/docs/gateway/guides/providers/openai.mdx
@@ -55,7 +55,7 @@ You can also find the complete code for this example on [GitHub](https://github.
 
 </Tip>
 
-For production deployments, see our [Deployment Guide](/docs/gateway/deployment/).
+For production deployments, see our [Deployment Guide](/gateway/deployment/).
 
 ### Configuration
 
@@ -79,16 +79,16 @@ model = "gpt_4o_mini_2024_07_18"
 
 See the [list of models available on OpenAI](https://platform.openai.com/docs/models/).
 
-See the [Configuration Reference](/docs/gateway/configuration-reference/) for optional fields (e.g. overwriting `api_base`).
+See the [Configuration Reference](/gateway/configuration-reference/) for optional fields (e.g. overwriting `api_base`).
 
 ### Credentials
 
 You must set the `OPENAI_API_KEY` environment variable before running the gateway.
 
 You can customize the credential location by setting the `api_key_location` to `env::YOUR_ENVIRONMENT_VARIABLE` or `dynamic::ARGUMENT_NAME`.
-See the [Credential Management](/docs/gateway/guides/credential-management/) guide and [Configuration Reference](/docs/gateway/configuration-reference/) for more information.
+See the [Credential Management](/gateway/guides/credential-management/) guide and [Configuration Reference](/gateway/configuration-reference/) for more information.
 
-Additionally, see the [OpenAI-Compatible](/docs/gateway/guides/providers/openai-compatible/) guide for more information on how to use other OpenAI-Compatible providers.
+Additionally, see the [OpenAI-Compatible](/gateway/guides/providers/openai-compatible/) guide for more information on how to use other OpenAI-Compatible providers.
 
 ### Deployment (Docker Compose)
 
