--- a/docs/gateway/guides/providers/together.mdx
+++ b/docs/gateway/guides/providers/together.mdx
@@ -55,7 +55,7 @@ You can also find the complete code for this example on [GitHub](https://github.
 
 </Tip>
 
-For production deployments, see our [Deployment Guide](/docs/gateway/deployment/).
+For production deployments, see our [Deployment Guide](/gateway/deployment/).
 
 ### Configuration
 
@@ -80,14 +80,14 @@ model = "llama3_1_8b_instruct_turbo"
 See the [list of models available on Together AI](https://docs.together.ai/docs/serverless-models).
 Dedicated endpoints and custom models are also supported.
 
-See the [Configuration Reference](/docs/gateway/configuration-reference/) for optional fields (e.g. overwriting `api_base`).
+See the [Configuration Reference](/gateway/configuration-reference/) for optional fields (e.g. overwriting `api_base`).
 
 ### Credentials
 
 You must set the `TOGETHER_API_KEY` environment variable before running the gateway.
 
 You can customize the credential location by setting the `api_key_location` to `env::YOUR_ENVIRONMENT_VARIABLE` or `dynamic::ARGUMENT_NAME`.
-See the [Credential Management](/docs/gateway/guides/credential-management/) guide and [Configuration Reference](/docs/gateway/configuration-reference/) for more information.
+See the [Credential Management](/gateway/guides/credential-management/) guide and [Configuration Reference](/gateway/configuration-reference/) for more information.
 
 ### Deployment (Docker Compose)
 
