--- a/docs/comparison/langchain.mdx
+++ b/docs/comparison/langchain.mdx
@@ -46,7 +46,7 @@ We provide a minimal example [integrating TensorZero with LangGraph](https://git
   This approach makes it easier to manage complex LLM applications, enables GitOps for prompt and configuration management, and streamlines optimization and experimentation workflows.
   LangChain blends application logic with LLM implementation details, streamlining rapid prototyping but making it harder to maintain and optimize complex applications.<br />
   [→ Prompt Templates & Schemas with TensorZero](/gateway/guides/prompt-templates-schemas/)<br />
-  [→ Advanced: Think of LLM Applications as POMDPs — Not Agents](/blog/think-of-llm-applications-as-pomdps-not-agents/)
+  [→ Advanced: Think of LLM Applications as POMDPs — Not Agents](https://www.tensorzero.com/blog/think-of-llm-applications-as-pomdps-not-agents/)
 
 - **Open-Source Observability.**
   TensorZero offers built-in observability features (including UI), collecting inference and feedback data in your own database.
