--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -16,7 +16,7 @@ Ask us on [Slack](https://www.tensorzero.com/slack) or [Discord](https://www.ten
 Email us at [hello@tensorzero.com](mailto:hello@tensorzero.com) to set up a Slack or Teams channel with your team (free).
 
 **Work with us.**
-We're [hiring in NYC](/jobs/).
+We're [hiring in NYC](https://www.tensorzero.com/jobs/).
 We'd also welcome [open-source contributions](https://github.com/tensorzero/tensorzero/blob/main/CONTRIBUTING.md)!
 
 </Tip>
@@ -58,7 +58,7 @@ ClickHouse is the best tool for the job.
 
 <Accordion title="Who is behind TensorZero?">
 
-We're a small technical team based in NYC. [Work with us →](/jobs/)
+We're a small technical team based in NYC. [Work with us →](https://www.tensorzero.com/jobs/)
 
 #### Founders
 
