--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -26,7 +26,7 @@ Ask us on [Slack](https://www.tensorzero.com/slack) or [Discord](https://www.ten
 Email us at [hello@tensorzero.com](mailto:hello@tensorzero.com) to set up a Slack or Teams channel with your team (free).
 
 **Work with us.**
-We're [hiring in NYC](/jobs/).
+We're [hiring in NYC](https://www.tensorzero.com/jobs/).
 We'd also welcome [open-source contributions](https://github.com/tensorzero/tensorzero/blob/main/CONTRIBUTING.md)!
 
 </Tip>
