--- a/docs/gateway/call-an-llm.mdx
+++ b/docs/gateway/call-an-llm.mdx
@@ -1,6 +1,6 @@
 ---
-title: How to call an LLM
-sidebarTitle: Call an LLM
+title: How to call any LLM with TensorZero
+sidebarTitle: Call any LLM
 description: Learn how to call any LLM with a unified API using the TensorZero Gateway.
 ---
 
@@ -12,7 +12,7 @@ This page shows how to:
 
 <Tip>
 
-We provide [complete code examples](https://github.com/tensorzero/tensorzero/tree/main/examples/docs/guides/gateway/call-an-llm) on Github.
+We provide [complete code examples](https://github.com/tensorzero/tensorzero/tree/main/examples/docs/guides/gateway/call-any-llm) on Github.
 
 </Tip>
 
