--- a/docs/gateway/call-an-llm.mdx
+++ b/docs/gateway/call-an-llm.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to call any LLM with TensorZero
+title: How to call any LLM
 sidebarTitle: Call any LLM
 description: Learn how to call any LLM with a unified API using the TensorZero Gateway.
 ---
