--- a/docs/gateway/deployment.mdx
+++ b/docs/gateway/deployment.mdx
@@ -102,7 +102,7 @@ TensorZero also does NOT share the name of any function, variant, metric, or sim
 
 See `howdy.rs` in the GitHub repository to see exactly what usage data is collected and shared with TensorZero.
 
-To disable usage analytics, set the followign configuration in the `tensorzero.toml` file:
+To disable usage analytics, set the following configuration in the `tensorzero.toml` file:
 
 ```toml title="tensorzero.toml"
 [gateway]
