Update the base model variables

--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -339,10 +339,10 @@
     "# Include the variants in `tensorzero.toml` that we want to evaluate\n",
     "# Update (uncomment) after each SFT and DPO\n",
     "VARIANTS_TO_EVALUATE = [\n",
-    "    \"gpt_4_1\",\n",
-    "    \"gpt_4_1_mini\",\n",
-    "    # \"gpt_4_1_mini_sft\",\n",
-    "    # \"gpt_4_1_mini_sft_dpo\",\n",
+    "    \"gpt_4.1\",\n",
+    "    \"gpt_4.1_mini\",\n",
+    "    # \"gpt_4.1_mini_sft\",\n",
+    "    # \"gpt_4.1_mini_sft_dpo\",\n",
     "]"
    ]
   },
@@ -519,8 +519,8 @@
    "source": [
     "CONFIG_PATH = \"config/tensorzero.toml\"\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
-    "TEMPLATE_VARIANT_NAME = \"gpt_4_1_mini_sft\"\n",
-    "MODEL_NAME = \"ft:gpt-4.1-mini-2025-04-14:codeday::C6hOxHy3\"  # Replace this with your SFT model to apply DPO\n",
+    "TEMPLATE_VARIANT_NAME = \"gpt_4.1_mini_sft\"\n",
+    "MODEL_NAME = \"openai::ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\"  # Replace this with your SFT model to apply DPO\n",
     "VAL_FRACTION = 0.2\n",
     "MAX_SAMPLES = 1000"
    ]
