--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -339,10 +339,10 @@
     "# Include the variants in `tensorzero.toml` that we want to evaluate\n",
     "# Update (uncomment) after each SFT and DPO\n",
     "VARIANTS_TO_EVALUATE = [\n",
-    "    \"gpt_4.1\",\n",
-    "    \"gpt_4.1_mini\",\n",
-    "    # \"gpt_4.1_mini_sft\",\n",
-    "    # \"gpt_4.1_mini_sft_dpo\",\n",
+    "    \"gpt_4_1\",\n",
+    "    \"gpt_4_1_mini\",\n",
+    "    # \"gpt_4_1_mini_sft\",\n",
+    "    # \"gpt_4_1_mini_sft_dpo\",\n",
     "]"
    ]
   },
