--- a/docs/gateway/call-any-llm.mdx
+++ b/docs/gateway/call-any-llm.mdx
@@ -371,7 +371,7 @@ See the [Inference (OpenAI) API Reference](./api-reference/inference-openai-comp
 
 <Tab title="HTTP">
 
-You can call the TensorZero Gateway directly over HTTP to call any LLM with a unified API.
+You can call the TensorZero Gateway directly over HTTP to access any LLM with a unified API.
 
 <Steps>
 
