--- a/docs/gateway/index.mdx
+++ b/docs/gateway/index.mdx
@@ -29,6 +29,12 @@ The TensorZero Gateway is a high-performance model gateway that provides a unifi
   Still not supported?
   Open an issue on [GitHub](https://github.com/tensorzero/tensorzero/issues) and we'll integrate it!
 
+  <Tip>
+
+  Learn more in our [How to call any LLM](./call-any-llm) guide.
+
+  </Tip>
+
 - **Blazing Fast.**
   The gateway (written in Rust 🦀) achieves &lt;1ms P99 latency overhead under extreme load.
   In [benchmarks](/gateway/benchmarks/), LiteLLM @ 100 QPS adds 25-100x+ more latency than our gateway @ 10,000 QPS.
@@ -65,8 +71,8 @@ The TensorZero Gateway is a high-performance model gateway that provides a unifi
 
 <Columns cols={2}>
   <Card title="Quickstart" href="/quickstart/">
-    Make your first TensorZero API call with built-in observability in under 5
-    minutes.
+    Make your first TensorZero API call with built-in observability and
+    fine-tuning in under 5 minutes.
   </Card>
   <Card title="Tutorial" href="/gateway/tutorial/">
     Build a simple chatbot, an email copilot, a RAG system, and a data
