--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -6,6 +6,9 @@ description: Get up and running with TensorZero in 5 minutes.
 This Quickstart guide shows how we'd upgrade an OpenAI wrapper to a minimal TensorZero deployment with built-in observability and fine-tuning capabilities &mdash; in just 5 minutes.
 From there, you can take advantage of dozens of features to build best-in-class LLM applications.
 
+This Quickstart covers a tour of TensorZero features.
+If you're only interested in inference with the gateway, see the shorter [How to call any LLM](./gateway/call-any-llm) guide.
+
 <Tip>
 
 You can also find the runnable code for this example on [GitHub](https://github.com/tensorzero/tensorzero/tree/main/examples/quickstart).
