correct path to tensorzero.toml

--- a/recipes/supervised_fine_tuning/unsloth/unsloth.ipynb
+++ b/recipes/supervised_fine_tuning/unsloth/unsloth.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CONFIG_PATH = \"../../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
+    "CONFIG_PATH = \"../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
     "\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
     "\n",
