update with tensorzero sft utils

--- a/recipes/supervised_fine_tuning/torchtune/torchtune.ipynb
+++ b/recipes/supervised_fine_tuning/torchtune/torchtune.ipynb
@@ -35,20 +35,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CONFIG_PATH = \"../../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
+    "CONFIG_PATH = \"../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
     "\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
     "\n",
-    "METRIC_NAME = \"exact_match\"\n",
+    "METRIC_NAME = \"jaccard_similarity\"\n",
     "\n",
     "# The name of the variant to use to grab the templates used for fine-tuning\n",
     "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"  # It's OK that this variant uses a different model than the one we're fine-tuning\n",
     "\n",
     "# If the metric is a float metric, you can set the threshold to filter the data\n",
     "FLOAT_METRIC_THRESHOLD = 0.5\n",
-    "\n",
-    "# Fraction of the data to use for validation\n",
-    "VAL_FRACTION = 0.2\n",
     "\n",
     "# Fraction of the data to use for validation\n",
     "VAL_FRACTION = 0.2\n",
@@ -74,6 +71,7 @@
    "outputs": [],
    "source": [
     "# The name of the model to fine-tune (supported models: https://docs.pytorch.org/torchtune/main/api_ref_models.html)\n",
+    "# You may need to update the MODELS dictionary in utils.py if you want to use a model that we have not yet included there\n",
     "MODEL_NAME = \"meta-llama/Meta-Llama-3.1-8B-Instruct\"\n",
     "\n",
     "# Whether to use LoRA or not. Set to False for full model fine-tuning\n",
@@ -111,6 +109,19 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
+    "\n",
+    "tensorzero_path = os.path.abspath(os.path.join(os.getcwd(), \"../../\"))\n",
+    "if tensorzero_path not in sys.path:\n",
+    "    sys.path.append(tensorzero_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import subprocess\n",
     "from pathlib import Path\n",
     "\n",
@@ -264,101 +275,15 @@
    "source": [
     "import json\n",
     "import tempfile\n",
-    "import warnings\n",
-    "from typing import Any, Dict, List, Optional\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import toml\n",
     "import yaml\n",
     "from tensorzero import (\n",
-    "    BooleanMetricNode,\n",
-    "    ContentBlock,\n",
-    "    FloatMetricNode,\n",
-    "    RawText,\n",
+    "    FloatMetricFilter,\n",
     "    TensorZeroGateway,\n",
-    "    Text,\n",
-    "    Thought,\n",
-    "    ToolCall,\n",
-    "    ToolResult,\n",
     ")\n",
-    "from tensorzero.internal import OutputMessage\n",
-    "from tensorzero.util import uuid7"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load the TensorZero configuration file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config_path = Path(CONFIG_PATH)\n",
-    "\n",
-    "assert config_path.exists(), f\"{CONFIG_PATH} does not exist\"\n",
-    "assert config_path.is_file(), f\"{CONFIG_PATH} is not a file\"\n",
-    "\n",
-    "with config_path.open(\"r\") as f:\n",
-    "    config = toml.load(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Retrieve the metric configuration.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert \"metrics\" in config, \"No `[metrics]` section found in config\"\n",
-    "assert METRIC_NAME in config[\"metrics\"], (\n",
-    "    f\"No metric named `{METRIC_NAME}` found in config\"\n",
-    ")\n",
-    "\n",
-    "metric = config[\"metrics\"][METRIC_NAME]\n",
-    "\n",
-    "metric"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Retrieve the configuration for the variant with the templates we'll use for fine-tuning.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert \"functions\" in config, \"No `[functions]` section found in config\"\n",
-    "assert FUNCTION_NAME in config[\"functions\"], (\n",
-    "    f\"No function named `{FUNCTION_NAME}` found in config\"\n",
-    ")\n",
-    "assert \"variants\" in config[\"functions\"][FUNCTION_NAME], (\n",
-    "    f\"No variants section found for function `{FUNCTION_NAME}`\"\n",
-    ")\n",
-    "assert TEMPLATE_VARIANT_NAME in config[\"functions\"][FUNCTION_NAME][\"variants\"], (\n",
-    "    f\"No variant named `{TEMPLATE_VARIANT_NAME}` found in function `{FUNCTION_NAME}`\"\n",
-    ")\n",
-    "\n",
-    "function_type = config[\"functions\"][FUNCTION_NAME][\"type\"]\n",
-    "variant = config[\"functions\"][FUNCTION_NAME][\"variants\"][TEMPLATE_VARIANT_NAME]\n",
-    "\n",
-    "variant"
+    "from tensorzero.util import uuid7\n",
+    "from util import tensorzero_rendered_samples_to_conversations, train_val_split"
    ]
   },
   {
@@ -385,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the metric filter"
+    "Set the metric filter as needed"
    ]
   },
   {
@@ -394,20 +319,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert \"optimize\" in metric, \"Metric is missing the `optimize` field\"\n",
-    "\n",
-    "if metric.get(\"type\") == \"float\":\n",
-    "    comparison_operator = \">=\" if metric[\"optimize\"] == \"max\" else \"<=\"\n",
-    "    metric_node = FloatMetricNode(\n",
-    "        metric_name=METRIC_NAME,\n",
-    "        value=FLOAT_METRIC_THRESHOLD,\n",
-    "        comparison_operator=comparison_operator,\n",
-    "    )\n",
-    "elif metric.get(\"type\") == \"boolean\":\n",
-    "    metric_node = BooleanMetricNode(\n",
-    "        metric_name=METRIC_NAME,\n",
-    "        value=True if metric[\"optimize\"] == \"max\" else False,\n",
-    "    )\n",
+    "comparison_operator = \">=\"\n",
+    "metric_node = FloatMetricFilter(\n",
+    "    metric_name=METRIC_NAME,\n",
+    "    value=FLOAT_METRIC_THRESHOLD,\n",
+    "    comparison_operator=comparison_operator,\n",
+    ")\n",
+    "# from tensorzero import BooleanMetricFilter\n",
+    "# metric_node = BooleanMetricFilter(\n",
+    "#     metric_name=METRIC_NAME,\n",
+    "#     value=True  # or False\n",
+    "# )\n",
     "\n",
     "metric_node"
    ]
@@ -428,6 +350,7 @@
     "stored_inferences = tensorzero_client.experimental_list_inferences(\n",
     "    function_name=FUNCTION_NAME,\n",
     "    variant_name=None,\n",
+    "    output_source=\"inference\",  # could also be \"demonstration\"\n",
     "    filters=metric_node,\n",
     "    limit=MAX_SAMPLES,\n",
     ")"
@@ -446,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rendered_inferences = tensorzero_client.experimental_render_inferences(\n",
+    "rendered_samples = tensorzero_client.experimental_render_inferences(\n",
     "    stored_inferences=stored_inferences,\n",
     "    variants={FUNCTION_NAME: TEMPLATE_VARIANT_NAME},\n",
     ")"
@@ -456,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reformat the rendered inferences to ChatML"
+    "Split the data into training and validation sets for fine-tuning."
    ]
   },
   {
@@ -465,126 +388,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def message_to_chatml(message: OutputMessage) -> Optional[List[Dict[str, Any]]]:\n",
-    "    chatml_messages: List[Dict[str, Any]] = []\n",
-    "    assert message.role in [\"user\", \"assistant\"], f\"Invalid role: {message.role}\"\n",
-    "    content: List[str] = []\n",
-    "    tool_calls: List[Dict[str, Any]] = []\n",
-    "    for content_block in message.content:\n",
-    "        if isinstance(content_block, Text):\n",
-    "            assert content_block.arguments is None, \"Arguments should be None\"\n",
-    "            content.append(content_block.text)\n",
-    "        elif isinstance(content_block, RawText):\n",
-    "            content.append(content_block.value)\n",
-    "        elif isinstance(content_block, Thought):\n",
-    "            content.append(f\"<think>{content_block['text']}</think>\")\n",
-    "        elif isinstance(content_block, ToolCall):\n",
-    "            tool_calls.append(\n",
-    "                {\n",
-    "                    \"function\": {\n",
-    "                        \"arguments\": content_block.raw_arguments,\n",
-    "                        \"name\": content_block.name,\n",
-    "                    },\n",
-    "                    \"id\": content_block.id,\n",
-    "                    \"type\": \"function\",\n",
-    "                }\n",
-    "            )\n",
-    "        elif isinstance(content_block, ToolResult):\n",
-    "            # Tool results get priority so that they follow the tool call in the conversation.\n",
-    "            # Any other \"user\" content will be appended in another message below.\n",
-    "            chatml_messages.append(\n",
-    "                {\n",
-    "                    \"role\": \"tool\",\n",
-    "                    \"tool_call_id\": content_block.id,\n",
-    "                    \"content\": content_block.result,\n",
-    "                }\n",
-    "            )\n",
-    "        else:\n",
-    "            warnings.warn(\n",
-    "                f\"We do not support content block type: {type(content_block)}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "    if content or tool_calls:\n",
-    "        chatml_message: Dict[str, Any] = {\"role\": message.role}\n",
-    "        if content:\n",
-    "            chatml_message[\"content\"] = \"\\n\".join(content)\n",
-    "        if tool_calls:\n",
-    "            chatml_message[\"tool_calls\"] = tool_calls\n",
-    "            if len(content) == 0:\n",
-    "                chatml_message[\"content\"] = \"\"\n",
-    "        chatml_messages.append(chatml_message)\n",
-    "\n",
-    "    return chatml_messages\n",
-    "\n",
-    "\n",
-    "def output_to_chatml(output: List[ContentBlock]) -> Dict[str, Any]:\n",
-    "    content: List[str] = []\n",
-    "    tool_calls: List[Dict[str, Any]] = []\n",
-    "\n",
-    "    for content_block in output:\n",
-    "        if isinstance(content_block, Text):\n",
-    "            assert content_block.arguments is None, \"Arguments should be None\"\n",
-    "            content.append(content_block.text)\n",
-    "        elif isinstance(content_block, Thought):\n",
-    "            content.append(f\"<think>{content_block['text']}</think>\")\n",
-    "        elif isinstance(content_block, ToolCall):\n",
-    "            tool_calls.append(\n",
-    "                {\n",
-    "                    \"function\": {\n",
-    "                        \"arguments\": content_block.raw_arguments,\n",
-    "                        \"name\": content_block.name,\n",
-    "                    },\n",
-    "                    \"id\": content_block.id,\n",
-    "                    \"type\": \"function\",\n",
-    "                }\n",
-    "            )\n",
-    "        else:\n",
-    "            warnings.warn(\n",
-    "                f\"We do not support content block type: {type(content_block)}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "\n",
-    "    # Once we finish collecting all blocks, create one assistant message.\n",
-    "    output_message: Dict[str, Any] = {\"role\": \"assistant\"}\n",
-    "    if content:\n",
-    "        output_message[\"content\"] = \"\\n\".join(content)\n",
-    "    if tool_calls:\n",
-    "        output_message[\"tool_calls\"] = tool_calls\n",
-    "        if len(content) == 0:\n",
-    "            output_message[\"content\"] = \"\"\n",
-    "\n",
-    "    return output_message\n",
-    "\n",
-    "\n",
-    "conversations = []\n",
-    "for rendered_inference in rendered_inferences:\n",
-    "    messages = []\n",
-    "    model_input = rendered_inference.input\n",
-    "    if model_input.system is not None:\n",
-    "        messages.append({\"role\": \"system\", \"content\": model_input.system})\n",
-    "    for message in model_input.messages:\n",
-    "        messages.extend(message_to_chatml(message))\n",
-    "    messages.append(output_to_chatml(rendered_inference.output))\n",
-    "\n",
-    "    # Drop conversations that have unknown content\n",
-    "    if all(msg is not None for msg in messages):\n",
-    "        conversations.append(\n",
-    "            {\n",
-    "                \"conversation\": {\"messages\": messages},\n",
-    "                \"episode_id\": rendered_inference.episode_id,\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "conversations = pd.DataFrame(conversations)"
+    "train_samples, eval_samples = train_val_split(\n",
+    "    rendered_samples,\n",
+    "    val_size=VAL_FRACTION,\n",
+    "    last_inference_only=True,\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Split the data into training and validation sets for fine-tuning.\n"
+    "Convert the rendered samples to conversations for tokenization"
    ]
   },
   {
@@ -593,27 +408,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get unique episode_ids\n",
-    "unique_episode_ids = conversations[\"episode_id\"].unique()\n",
-    "\n",
-    "# Shuffle the unique episode_ids\n",
-    "np.random.seed(SEED)\n",
-    "np.random.shuffle(unique_episode_ids)\n",
-    "\n",
-    "# Calculate the split index for episode_ids\n",
-    "split_index = int(len(unique_episode_ids) * (1 - VAL_FRACTION))\n",
-    "\n",
-    "# Split the episode_ids into training and validation sets\n",
-    "train_episode_ids = unique_episode_ids[:split_index]\n",
-    "val_episode_ids = unique_episode_ids[split_index:]\n",
-    "\n",
-    "# Create training and validation DataFrames based on episode_ids\n",
-    "train_df = conversations[conversations[\"episode_id\"].isin(train_episode_ids)]\n",
-    "val_df = conversations[conversations[\"episode_id\"].isin(val_episode_ids)]\n",
-    "\n",
-    "print(f\"Training set size: {len(train_df)}\")\n",
-    "print(f\"Validation set size: {len(val_df)}\")\n",
-    "print(f\"Actual validation fraction: {len(val_df) / len(conversations):.2f}\")"
+    "train_conversations = tensorzero_rendered_samples_to_conversations(\n",
+    "    train_samples, conversation_key=\"messages\"\n",
+    ")\n",
+    "eval_conversations = tensorzero_rendered_samples_to_conversations(\n",
+    "    eval_samples, conversation_key=\"messages\"\n",
+    ")"
    ]
   },
   {
@@ -628,14 +428,14 @@
     "    # Write training JSONL\n",
     "    train_json_path = temp_dir / \"train.json\"\n",
     "    with train_json_path.open(\"w\") as f:\n",
-    "        for item in train_df[\"conversation\"]:\n",
+    "        for item in train_conversations:\n",
     "            json.dump(item, f)\n",
     "            f.write(\"\\n\")\n",
     "\n",
     "    # Write evaluation JSONL\n",
     "    val_json_path = temp_dir / \"eval.json\"\n",
     "    with val_json_path.open(\"w\") as f:\n",
-    "        for item in val_df[\"conversation\"]:\n",
+    "        for item in eval_conversations:\n",
     "            json.dump(item, f)\n",
     "            f.write(\"\\n\")\n",
     "\n",
@@ -831,44 +631,6 @@
     "}\n",
     "\n",
     "print(toml.dumps(model_config))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally, add a new variant to your function to use the fine-tuned model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variant_config = {\n",
-    "    \"type\": \"chat_completion\",\n",
-    "    \"weight\": 0,\n",
-    "    \"model\": model_identifier,\n",
-    "}\n",
-    "\n",
-    "system_template = variant.get(\"system_template\")\n",
-    "if system_template:\n",
-    "    variant_config[\"system_template\"] = system_template\n",
-    "\n",
-    "user_template = variant.get(\"user_template\")\n",
-    "if user_template:\n",
-    "    variant_config[\"user_template\"] = user_template\n",
-    "\n",
-    "assistant_template = variant.get(\"assistant_template\")\n",
-    "if assistant_template:\n",
-    "    variant_config[\"assistant_template\"] = assistant_template\n",
-    "\n",
-    "full_variant_config = {\n",
-    "    \"functions\": {FUNCTION_NAME: {\"variants\": {model_identifier: variant_config}}}\n",
-    "}\n",
-    "\n",
-    "print(toml.dumps(full_variant_config))"
    ]
   },
   {
