Update the results, and the toml file,  add a new plot with DICL

--- a/examples/data-extraction-ner-sft-dpo/data-extraction-ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/data-extraction-ner-sft-dpo.ipynb
@@ -329,6 +329,7 @@
     "VARIANTS_TO_EVALUATE = [\n",
     "    \"gpt_4_1\",\n",
     "    \"gpt_4_1_mini\",\n",
+    "    # \"gpt_4_1_mini_dicl\",\n",
     "    # \"gpt_4_1_mini_sft\",\n",
     "    # \"gpt_4_1_mini_sft_dpo\",\n",
     "]"
